# zfn_api

./: academia.py  client.py  constants.py  grades.py  notifications.py  pyproject.toml  zfn_api.py
tests/: test_client.py
zfn_api/: client.py  protocols.py  utils.py
zfn_api/modules/: academia.py  auth.py  courses.py  grades.py  info.py  notifications.py  schedule.py
